# TrigonometrySaver

./: .gitignore  CMakeLists.txt  Fractions.cpp  Fractions.hpp  Help.cpp  Help.hpp  Input.cpp  Input.hpp  TrigValues.cpp  TrigValues.hpp  TrigonometricOperations.cpp  TrigonometricOperations.hpp  main.cpp
